feat: add membership plans, fee management, and fix user creation access control

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -1,11 +1,16 @@
+# Backend Improvements - .gitignore
+
+# Environment variables
+.env
+
 # Python
 __pycache__/
 *.py[cod]
 *$py.class
 *.so
 .Python
-env/
 venv/
+env/
 ENV/
 build/
 develop-eggs/
@@ -19,99 +24,36 @@ parts/
 sdist/
 var/
 wheels/
-pip-wheel-metadata/
-share/python-wheels/
 *.egg-info/
 .installed.cfg
 *.egg
-MANIFEST
 
-# Virtual Environments
-venv/
-env/
-ENV/
-env.bak/
-venv.bak/
-
-# IDE
+# IDEs
 .vscode/
 .idea/
 *.swp
 *.swo
 *~
-.DS_Store
-*.sublime-project
-*.sublime-workspace
-.project
-.pydevproject
-.settings/
-*.code-workspace
 
-# Testing
-.tox/
-.coverage
-.coverage.*
-.cache
-nosetests.xml
-coverage.xml
-*.cover
-*.py,cover
-.hypothesis/
-.pytest_cache/
-htmlcov/
-
-# FastAPI/Uvicorn
+# Logs
 *.log
+app.log
 logs/
-
-# Environment Variables
-.env
-.env.local
-.env.*.local
-*.pem
-*.key
 
 # Database
 *.db
 *.sqlite
 *.sqlite3
-db.sqlite3
-*.db-journal
 
 # OS
 .DS_Store
 Thumbs.db
-.vscode/settings.json
 
-# Poetry
-poetry.lock
+# Alembic
+alembic/versions/__pycache__/
+alembic/*
 
-# Pipenv
-Pipfile.lock
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# Pyre type checker
-.pyre/
-
-# Pre-commit
-.pre-commit-framework/
-
-# Temporary files
-*.tmp
-tmp/
-temp/
-
-# AWS
-.aws/
-.credentials
-
-# Docker
-.dockerignore
-
-# Misc
-.vagrant/
-*.bak
+# Testing
+.pytest_cache/
+.coverage
+htmlcov/
