--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,6 +1,7 @@
 fastapi[standard]
 uvicorn
 pydantic
+pydantic-settings
 python-multipart
 python-dotenv
 SQLAlchemy
@@ -10,3 +11,4 @@ python-jose[cryptography]
 bcrypt==4.0.1             
 passlib[bcrypt]
 alembic
+loguru
