feat : Backend Completed With All Functionalities + Owner Dashboard Completed

--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -57,3 +57,10 @@ alembic/*
 .pytest_cache/
 .coverage
 htmlcov/
+
+DUMMY_PAYMENT_GATEWAY.md
+DUMMY_PAYMENT_IMPLEMENTATION.md
+SUBSCRIPTION_PLAN_ANALYSIS.md
+work_history.md
+FRONTEND_IMPLEMENTATION_GUIDE.md
+PROJECT_ROADMAP.md
