--- a/gym-dashboard/package.json
+++ b/gym-dashboard/package.json
@@ -11,14 +11,18 @@
   "dependencies": {
     "@tanstack/react-query": "^5.90.16",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.13.4",
     "clsx": "^2.1.1",
     "lucide-react": "^0.562.0",
-    "next": "16.1.1",
+    "next": "^16.1.6",
     "react": "19.2.3",
     "react-dom": "19.2.3",
+    "react-hot-toast": "^2.6.0",
+    "react-toastify": "^11.0.5",
     "recharts": "^3.6.0",
     "tailwind-merge": "^3.4.0",
-    "zustand": "^5.0.9"
+    "yup": "^1.7.1",
+    "zustand": "^5.0.11"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
